re PR fortran/45438 ([OOP] ICE with -fcheck=pointer)

2010-09-20  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/45438
	* trans-expr.c (gfc_conv_procedure_call): Fix pointer checking for
	TBPs, PPCs and pointer/allocatable components.

2010-09-20  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/45438
	* gfortran.dg/pointer_check_7.f90: New.

From-SVN: r164462